--- a/app/src/main/res/layout/fragment_entry.xml
+++ b/app/src/main/res/layout/fragment_entry.xml
@@ -11,21 +11,23 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:paddingLeft="@dimen/fragment_horizontal_margin"
         android:paddingTop="@dimen/fragment_vertical_margin"
         android:paddingRight="@dimen/fragment_horizontal_margin"
-        android:paddingBottom="@dimen/fragment_vertical_margin"
-        android:layout_gravity="center">
+        android:paddingBottom="@dimen/fragment_vertical_margin">
 
         <EditText
             android:id="@+id/username"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="@dimen/entry_margin"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="@dimen/entry_margin"
+            android:background="@drawable/searchview_bg"
             android:hint="@string/prompt_email"
             android:inputType="textEmailAddress"
+            android:padding="15dp"
             android:selectAllOnFocus="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,15 +35,17 @@
 
         <EditText
             android:id="@+id/password"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="@dimen/entry_margin"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="@dimen/entry_margin"
+            android:background="@drawable/searchview_bg"
             android:hint="@string/prompt_password"
             android:imeActionLabel="@string/log_in"
             android:imeOptions="actionDone"
             android:inputType="textPassword"
+            android:padding="15dp"
             android:selectAllOnFocus="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,40 +53,43 @@
 
         <Button
             android:id="@+id/signup"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginStart="48dp"
+            android:layout_marginStart="@dimen/entry_margin"
             android:layout_marginTop="80dp"
-            android:layout_marginEnd="48dp"
+            android:layout_marginEnd="@dimen/entry_margin"
             android:layout_marginBottom="64dp"
+            android:background="@drawable/btn_bg"
             android:enabled="true"
             android:text="@string/sign_up"
+            android:textColor="@color/white"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/password"
-            app:layout_constraintVertical_bias="0.2"
-            android:visibility="gone"/>
+            app:layout_constraintVertical_bias="0.2" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/login"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginStart="48dp"
+            android:layout_marginStart="@dimen/entry_margin"
             android:layout_marginTop="80dp"
-            android:layout_marginEnd="48dp"
+            android:layout_marginEnd="@dimen/entry_margin"
             android:layout_marginBottom="64dp"
+            android:background="@drawable/btn_bg"
             android:enabled="true"
             android:text="@string/log_in"
+            android:textColor="@color/white"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/password"
-            app:layout_constraintVertical_bias="0.2"
-            android:visibility="gone"
-            />
+            app:layout_constraintVertical_bias="0.2" />
 
         <ProgressBar
             android:id="@+id/loading"
