--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -4,12 +4,12 @@
         <item
             android:id="@+id/mapView"
             android:title="@string/guides"
-            android:icon="@android:drawable/ic_menu_mapmode"/>
+            android:icon="@drawable/ic_baseline_map_24"/>
 
         <item
             android:id="@+id/addView"
             android:title="@string/add"
-            android:icon="@android:drawable/ic_input_add"/>
+            android:icon="@drawable/ic_round_add_24"/>
 
         <item
             android:id="@+id/profileView"
