--- a/app/src/main/res/layout/fragment_top_locations.xml
+++ b/app/src/main/res/layout/fragment_top_locations.xml
@@ -13,18 +13,37 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="20dp"
+            android:layout_weight="10"
             android:orientation="horizontal">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/top_locations"
-                android:textColor="@color/white"
-                android:textSize="25sp" />
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvMessage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="Hey"
+                    android:textSize="17.5sp"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    tools:ignore="NestedWeights" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-black"
+                    android:text="@string/top_locations"
+                    android:textColor="@color/white"
+                    android:textSize="25sp"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
 
             <ImageButton
                 android:id="@+id/dismiss"
@@ -44,7 +63,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="20dp"
+            android:layout_weight="1.5" />
     </LinearLayout>
 
 </FrameLayout>
