--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,5 @@
     <dimen name="location_header_margin">7.5dp</dimen>
     <dimen name="confirm_icon_size">60dp</dimen>
     <dimen name="entry_margin">20dp</dimen>
+    <dimen name="player_btn_dimen">35dp</dimen>
 </resources>
