--- a/app/src/main/res/layout/location_guide_media.xml
+++ b/app/src/main/res/layout/location_guide_media.xml
@@ -22,13 +22,21 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <com.google.android.exoplayer2.ui.PlayerView
-        android:id="@+id/epPlayer"
+        android:id="@+id/epVideo"
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        android:background="@color/black"
         android:visibility="gone"
         app:controller_layout_id="@layout/player_view"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/vid_background"/>
 
+    <com.google.android.exoplayer2.ui.PlayerControlView
+        android:id="@+id/epAudio"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:surface_type="none"
+        app:controller_layout_id="@layout/audio_player_view"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
