--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -3,7 +3,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,8 +13,7 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         map:cameraTilt="45"
-        map:uiCompass="false"
-        tools:context=".activities.MapsActivity" />
+        map:uiCompass="false" />
 
     <FrameLayout
         android:id="@+id/fragmentsFrame"
@@ -28,7 +26,7 @@
             layout="@layout/searchview_ui"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginTop="15dp" />
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
 
@@ -37,7 +35,7 @@
             android:clickable="false"
             android:visibility="visible">
 
-            <FrameLayout
+            <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/modalLocationView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
