Added image overlay for fragment_profile.xml

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -31,7 +31,7 @@
                 android:layout_margin="10dp"
                 android:background="@color/white"
                 android:contentDescription="@string/profile_icon"
-                android:foreground="@drawable/avatar_overlay"
+                android:foreground="@drawable/img_overlay"
                 tools:src="@tools:sample/avatars" />
         </FrameLayout>
 
