--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,15 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
     </style>
+
+    <resources>
+        <style name="SplashTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+            <item name="android:windowBackground">@drawable/splash_background</item>
+            <item name="colorPrimary">@color/colorPrimary</item>
+            <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+            <item name="colorAccent">@color/colorAccent</item>
+            <item name="android:statusBarColor">@color/colorAccent</item>
+        </style>
+    </resources>
+
 </resources>
