--- a/app/src/main/res/layout/fragment_top_locations.xml
+++ b/app/src/main/res/layout/fragment_top_locations.xml
@@ -64,6 +64,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1.5" />
     </LinearLayout>
 
