--- a/app/src/main/res/drawable-v23/splash_background.xml
+++ b/app/src/main/res/drawable-v23/splash_background.xml
@@ -1,23 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-    <item>
-        <shape>
-            <gradient
-                android:angle="-45"
-                android:endColor="@color/secondary_color"
-                android:startColor="@color/main_color"
-                android:type="linear" />
-        </shape>
-    </item>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/splash_gradient" />
     <item
-        android:width="200dp"
-        android:height="200dp"
-        android:left="200dp"
-        android:right="200dp"
-        android:top="200dp"
-        android:bottom="200dp"
-        tools:targetApi="m">
-        <bitmap android:src="@drawable/travel_guide_icon" />
+        android:bottom="100dp"
+        android:left="100dp"
+        android:right="100dp"
+        android:top="100dp">
+        <bitmap
+            android:gravity="center"
+            android:src="@drawable/travel_guide_icon" />
     </item>
 </layer-list>
