--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,37 +15,61 @@
         android:orientation="vertical"
         tools:context=".fragments.ProfileFragment">
 
-
-        <FrameLayout
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="0dp"
-            android:padding="0dp">
+            android:orientation="horizontal">
 
-            <ImageButton
-                android:id="@+id/ibAvatar"
+            <FrameLayout
+                android:id="@+id/flContainer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:background="@color/white"
-                android:contentDescription="@string/profile_icon"
-                android:foreground="@drawable/img_overlay"
-                tools:src="@tools:sample/avatars" />
-        </FrameLayout>
+                android:layout_margin="0dp"
+                android:padding="15dp">
 
-        <TextView
-            android:id="@+id/tvProfile"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="15dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="TextView"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="17.5sp" />
+                <ImageButton
+                    android:id="@+id/ibAvatar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@color/white"
+                    android:contentDescription="@string/profile_icon"
+                    android:foreground="@drawable/img_overlay"
+                    tools:src="@tools:sample/avatars" />
+            </FrameLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvProfile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="15dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:gravity="center_vertical"
+                    android:text="TextView"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/tvDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginBottom="15dp"
+                    android:text="TextView" />
+            </LinearLayout>
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/logOutBtn"
@@ -66,8 +90,7 @@
             android:layout_weight="0"
             android:clickable="true"
             android:focusable="true"
-            android:nestedScrollingEnabled="true">
-        </androidx.viewpager2.widget.ViewPager2>
+            android:nestedScrollingEnabled="true"></androidx.viewpager2.widget.ViewPager2>
 
     </LinearLayout>
 
