--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -33,8 +33,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="5dp">
+                android:layout_marginBottom="5dp"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imageView2"
@@ -48,11 +48,11 @@
                     android:id="@+id/textView2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center_vertical"
+                    android:layout_marginStart="@dimen/compose_section_header"
                     android:layout_weight="1"
+                    android:gravity="center_vertical"
                     android:text="@string/add_location"
-                    android:textColor="@color/black"
-                    android:layout_marginStart="@dimen/compose_section_header"/>
+                    android:textColor="@color/black" />
             </LinearLayout>
 
             <androidx.appcompat.widget.AppCompatButton
@@ -74,8 +74,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="5dp">
+                android:layout_marginBottom="5dp"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imageView3"
@@ -89,11 +89,11 @@
                     android:id="@+id/textView3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center_vertical"
+                    android:layout_marginStart="@dimen/compose_section_header"
                     android:layout_weight="1"
+                    android:gravity="center_vertical"
                     android:text="@string/add_text"
-                    android:textColor="@color/black"
-                    android:layout_marginStart="@dimen/compose_section_header"/>
+                    android:textColor="@color/black" />
             </LinearLayout>
 
 
