--- a/app/src/main/res/layout/location_guide.xml
+++ b/app/src/main/res/layout/location_guide.xml
@@ -98,7 +98,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="end"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginTop="-5dp">
 
                 <View
                     android:id="@+id/view"
