--- a/app/src/main/res/drawable-v24/my_location_bg.xml
+++ b/app/src/main/res/drawable-v24/my_location_bg.xml
@@ -5,5 +5,5 @@
     <size
         android:width="100dp"
         android:height="100dp" />
-    <solid android:color="@color/secondary_color" />
+    <solid android:color="@color/main_color" />
 </shape>
