--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -14,7 +14,11 @@
         android:clickable="false"
         android:gravity="center"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/margin_start_screen_text">
+        android:paddingBottom="@dimen/margin_start_screen_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/imageView"
@@ -23,7 +27,7 @@
             android:layout_marginBottom="85dp"
             android:contentDescription="@string/logo"
             android:paddingEnd="20dp"
-            app:srcCompat="@drawable/travel_guide_icon" />
+            app:srcCompat="@drawable/ic_travel_guide_icon" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/loginBtn"
