Transparent status bar for all views

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
+        android:layout_marginTop="@dimen/status_bar_height"
         android:clickable="true"
         android:orientation="vertical"
         tools:context=".fragments.ProfileFragment">
@@ -69,6 +70,13 @@
                     android:text="TextView" />
             </LinearLayout>
 
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                tools:srcCompat="@tools:sample/avatars" />
+
         </LinearLayout>
 
         <Button
@@ -90,7 +98,7 @@
             android:layout_weight="0"
             android:clickable="true"
             android:focusable="true"
-            android:nestedScrollingEnabled="true"></androidx.viewpager2.widget.ViewPager2>
+            android:nestedScrollingEnabled="true" />
 
     </LinearLayout>
 
