--- a/app/src/main/res/layout/fragment_top_locations.xml
+++ b/app/src/main/res/layout/fragment_top_locations.xml
@@ -20,7 +20,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -60,11 +60,10 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvTop"
+            android:background="@color/transparent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_weight="1.5" />
     </LinearLayout>
 
