--- a/app/src/main/res/drawable/top_locations_bg.xml
+++ b/app/src/main/res/drawable/top_locations_bg.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/secondary_color" />
+            <solid android:color="@color/main_color" />
             <corners
                 android:topLeftRadius="@dimen/corner_radius"
                 android:topRightRadius="@dimen/corner_radius" />
