--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -3,9 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/off_white"
+    android:background="@color/white"
     android:clickable="true"
     android:focusable="true"
+    android:layout_marginTop="@dimen/status_bar_height"
     tools:context=".fragments.ComposeFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -20,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-black"
+            android:layout_marginTop="15dp"
             android:text="@string/new_guide"
             android:textColor="#000000"
             android:textSize="@dimen/header_text_size" />
@@ -27,7 +29,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="47.5dp"
+            android:layout_marginTop="20dp"
             android:orientation="vertical">
 
             <LinearLayout
