--- a/app/src/main/res/layout/fragment_location_guide_list.xml
+++ b/app/src/main/res/layout/fragment_location_guide_list.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/off_white"
+    android:fitsSystemWindows="true"
     tools:context=".fragments.LocationGuideFragment">
 
     <TextView
@@ -19,6 +20,7 @@
         android:textSize="20sp" />
 
     <LinearLayout
+        android:id="@+id/locationFrame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
