--- a/app/src/main/res/layout/top_locations_item.xml
+++ b/app/src/main/res/layout/top_locations_item.xml
@@ -1,31 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="20dp">
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="10dp"
+    app:background="@color/transparent">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvLocations"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="225dp"
         android:background="?android:attr/selectableItemBackground"
-        app:cardCornerRadius="@dimen/corner_radius"
-        app:background="@color/white"
         android:elevation="5dp"
+        app:cardCornerRadius="@dimen/corner_radius"
+        app:cardPreventCornerOverlap="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+            android:id="@+id/ivBackground"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:contentDescription="Image Background"
+            android:scaleType="centerCrop"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <View
+            android:id="@+id/view3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/image_gradient" />
+
         <TextView
             android:id="@+id/locationName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_marginStart="12.5dp"
+            android:layout_marginTop="180dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="15dp"
             android:fontFamily="sans-serif-medium"
             android:text="Location"
-            android:textColor="@color/black"
-            android:textSize="15sp" />
+            android:textColor="@color/white"
+            android:textSize="17.5sp"
+            app:layout_constraintBottom_toBottomOf="@+id/cvLocations"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/cvLocations" />
     </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
