--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="main_color">#003F91</color>
     <color name="secondary_color">#3590F3</color>
     <color name="tertiary_color">#EF767A</color>
+    <color name="transparent">@android:color/transparent</color>
 
 
 </resources>
