--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,14 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:layout_marginTop="@dimen/status_bar_height"
         android:clickable="true"
+        android:layout_marginTop="@dimen/status_bar_height"
         android:orientation="vertical"
         tools:context=".fragments.ProfileFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:orientation="horizontal">
 
             <FrameLayout
@@ -27,7 +28,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="0dp"
-                android:padding="15dp">
+                android:layout_weight="0"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp">
 
                 <ImageButton
                     android:id="@+id/ibAvatar"
@@ -45,6 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_weight="2"
                 android:orientation="vertical">
 
                 <TextView
@@ -70,21 +74,16 @@
                     android:text="TextView" />
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/imageView4"
+            <ImageButton
+                android:id="@+id/ibSettings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                tools:srcCompat="@tools:sample/avatars" />
-
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="15dp"
+                android:layout_weight="0"
+                android:background="@null"
+                android:src="@drawable/ic_round_settings_24" />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/logOutBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/log_out" />
-
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
