--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -4,27 +4,33 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+  <group android:scaleX="0.8684211"
+      android:scaleY="0.8684211"
+      android:translateX="21"
+      android:translateY="21">
+    <path
+        android:pathData="M38,38m-38,0a38,38 0,1 1,76 0a38,38 0,1 1,-76 0">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startY="10.2948"
+            android:startX="13.1713"
+            android:endY="84.6295"
+            android:endX="76"
+            android:type="linear">
+          <item android:offset="0.149094" android:color="#FF003F91"/>
+          <item android:offset="1" android:color="#FF3590F3"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M24.3018,17.3066L31.4472,38.1445C31.7815,39.1192 32.9269,39.5407 33.8133,39.0151L41.5249,34.4419C42.4112,33.9163 42.5908,32.7091 41.8958,31.9483L27.0387,15.6835C25.85,14.3821 23.7301,15.6392 24.3018,17.3066Z"
+        android:strokeWidth="1.25"
+        android:fillColor="#ffffff"
+        android:strokeColor="#000000"/>
+    <path
+        android:pathData="M52.506,59.1915L45.1684,38.4205C44.8252,37.4489 43.6759,37.038 42.7945,37.5718L35.1254,42.2159C34.2439,42.7497 34.0755,43.9585 34.7775,44.7129L49.7841,60.8398C50.9849,62.1302 53.0931,60.8535 52.506,59.1915Z"
+        android:strokeWidth="1.25"
+        android:fillColor="#EF767A"
+        android:strokeColor="#000000"/>
+  </group>
 </vector>
