--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="0dp"
-        android:fitsSystemWindows="false"
+        android:fitsSystemWindows="true"
         android:padding="0dp"
         android:background="@color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
