--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:background="@color/white"
         android:clickable="true"
-        android:layout_marginTop="@dimen/status_bar_height"
+        android:focusable="true"
         android:orientation="vertical"
         tools:context=".fragments.ProfileFragment">
 
