--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TravelGuide" parent="Theme.MaterialComponents.DayNight">
+    <style name="Theme.TravelGuide" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
         <!-- light theme navigation and status bar   -->
-        <item name="android:windowTranslucentStatus" tools:ignore="DuplicateDefinition">true</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+<!--        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>-->
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
 
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/main_color</item>
